提取公共作者介绍

--- a/blog/2022-06-06-结合css、div谈一谈屏幕尺寸、分辨率、缩放概念.md
+++ b/blog/2022-06-06-结合css、div谈一谈屏幕尺寸、分辨率、缩放概念.md
@@ -1,10 +1,7 @@
 ---
 slug: 结合css、div谈一谈屏幕尺寸、分辨率、缩放概念
 title: 结合css、div谈一谈屏幕尺寸、分辨率、缩放概念
-author: Slipeda
-author_title: Front-end Engineer
-author_url: https://github.com/Jonesy-1212/
-author_image_url: https://shapeimage.oss-cn-shenzhen.aliyuncs.com/kdlImage/7e603d7eaa7741cdaf540ab85e900876-logo.jpg
+authors: [Slipeda]
 description: 自适应布局的前缀基础。
 tags: [前端, css]
 ---
