--- a/blog/2022-11-22-浅谈与使用js中的原型.md
+++ b/blog/2022-11-22-浅谈与使用js中的原型.md
@@ -1,10 +1,7 @@
 ---
 slug: 浅谈与使用js中的原型
 title: 浅谈与使用js中的原型
-author: Slipeda
-author_title: Front-end Engineer
-author_url: https://github.com/Jonesy-1212/
-author_image_url: https://shapeimage.oss-cn-shenzhen.aliyuncs.com/kdlImage/7e603d7eaa7741cdaf540ab85e900876-logo.jpg
+authors: [Slipeda]
 description: 浅谈与使用js中的原型
 tags: [前端, javascript]
 # activityId: 相关动态 ID
