--- a/blog/2022-12-13-use-immer.md
+++ b/blog/2022-12-13-use-immer.md
@@ -1,10 +1,7 @@
 ---
 slug: use-immer
 title:  react 新文档 推荐使用的 use-immer
-author: Slipeda
-author_title: Front-end Engineer
-author_url: https://github.com/Jonesy-1212/
-author_image_url: https://shapeimage.oss-cn-shenzhen.aliyuncs.com/kdlImage/7e603d7eaa7741cdaf540ab85e900876-logo.jpg
+authors: [Slipeda]
 description: window.location
 tags: [immer, use-immer]
 ---
