--- a/blog/2022-05-01-回炉重造，css常规布局系统整理——实战开发后复盘小.md
+++ b/blog/2022-05-01-回炉重造，css常规布局系统整理——实战开发后复盘小.md
@@ -1,10 +1,7 @@
 ---
 slug: 回炉重造，css常规布局系统整理——实战开发后复盘小结
 title: 回炉重造，css常规布局系统整理——实战开发后复盘小结
-author: Slipeda
-author_title: Front-end Engineer
-author_url: https://github.com/Jonesy-1212/
-author_image_url: https://shapeimage.oss-cn-shenzhen.aliyuncs.com/kdlImage/7e603d7eaa7741cdaf540ab85e900876-logo.jpg
+authors: [Slipeda]
 description: 本文意在系统总结常用的css布局，以达到融会贯通之功效。
 tags: [前端, css]
 # activityId: 相关动态 ID
