--- a/blog/2022-08-02-react子父组件互相通信传值.md
+++ b/blog/2022-08-02-react子父组件互相通信传值.md
@@ -1,10 +1,7 @@
 ---
 slug: react子父组件互相通信传值
 title: react子父组件互相通信传值
-author: Slipeda
-author_title: Front-end Engineer
-author_url: https://github.com/Jonesy-1212/
-author_image_url: https://shapeimage.oss-cn-shenzhen.aliyuncs.com/kdlImage/7e603d7eaa7741cdaf540ab85e900876-logo.jpg
+authors: [Slipeda]
 description: react子父组件互相通行，意在融会贯通。
 tags: [前端, react]
 # activityId: 相关动态 ID
