--- a/blog/2022-12-05-react高阶组件概念与简单使用.md
+++ b/blog/2022-12-05-react高阶组件概念与简单使用.md
@@ -1,10 +1,7 @@
 ---
 slug: react高阶组件概念与简单使用
 title: react高阶组件概念与简单使用
-author: Slipeda
-author_title: Front-end Engineer
-author_url: https://github.com/Jonesy-1212/
-author_image_url: https://shapeimage.oss-cn-shenzhen.aliyuncs.com/kdlImage/7e603d7eaa7741cdaf540ab85e900876-logo.jpg
+authors: [Slipeda]
 description: react高阶组件概念与简单使用
 tags: [前端, react]
 # activityId: 相关动态 ID
