--- a/blog/2023-03-10-ts绕开属性检查的3种方法.md
+++ b/blog/2023-03-10-ts绕开属性检查的3种方法.md
@@ -1,10 +1,7 @@
 ---
 slug: ts绕开属性检查的3种方法
 title: ts绕开属性检查的3种方法
-author: Slipeda
-author_title: Front-end Engineer
-author_url: https://github.com/Jonesy-1212/
-author_image_url: https://shapeimage.oss-cn-shenzhen.aliyuncs.com/kdlImage/7e603d7eaa7741cdaf540ab85e900876-logo.jpg
+authors: [Slipeda]
 description: ts绕开属性检查的3种方法
 tags: [前端, ts]
 # activityId: 相关动态 ID
